--- a/index.html
+++ b/index.html
@@ -1,7 +1,63 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<head>
+
+  <meta charset="utf-8">
+  <title>Allison Yan | Home</title>
+  <meta name="description" content="Allison Yan, UX/UI Designer, Bubble Tea Enthusiast. Toronto.">
+  <meta name="keywords" content="allison yan">
+  <meta name="robots" content="index, follow" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+
+<div class="container">
+
+  <div class="row">
+    <div class="twelve columns">
+	<span class="heading">Allison Yan</span>
+	</div>
+  </div>
+  <div class="row">
+    <div class="twelve columns">
+	        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>  
+	</div>
+  </div>
+
+  <div class="row">
+    <div class="one-half column">1/2</div>
+    <div class="one-half column">
+	   <h6><strong>Allison Yan | UI/UX Designer</strong></h6>
+	   <span class="content">
+	   I received my BSc in Psychology with a Minor in Computer Science from McGill University.
+	   </span>
+	</div>
+  </div>
+  
+  <div class="row">
+    <div class="footer twelve columns">1/2</div>
+ 
+  </div>
+</div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
