--- a/sandbox.html
+++ b/sandbox.html
@@ -26,7 +26,7 @@
 
   <div class="row">
     <div class="twelve columns">
-	<span class="heading">Allison Yan</span>
+	<span class="heading"><a href="index.html">Allison Yan</a></span>
 	</div>
   </div>
   <div class="row">
@@ -46,13 +46,14 @@
     <div class="one-half column">
 	   <h6><strong>Allison Yan | UI/UX Designer</strong></h6>
 	   <span class="content">
+	   Will be completing my Master of Health Informatics at the University of Toronto in 2015. 
 	   I received my BSc in Psychology with a Minor in Computer Science from McGill University.
 	   </span>
 	</div>
   </div>
   
   <div class="row">
-    <div class="footer twelve columns">1/2</div>
+    <div class="footer twelve columns">allison.yan(AT)gmail(DOT)com</div>
  
   </div>
 </div>
