--- a/sandbox.html
+++ b/sandbox.html
@@ -23,7 +23,7 @@
 
   <div class="row">
     <div class="twelve columns">
-	<span class="heading"><a href="index.html">Allison Yan</a></span>
+	<span class="heading"><a href="./">Allison Yan</a></span>
 	</div>
   </div>
   <div class="row">
@@ -41,16 +41,25 @@
   <div class="row">
     <div class="one-half column">1/2</div>
     <div class="one-half column">
-	   <h6><strong>Allison Yan | UI/UX Designer</strong></h6>
+	 
 	   <span class="content">
-	   Will be completing my Master of Health Informatics at the University of Toronto in 2015. 
-	   I received my BSc in Psychology with a Minor in Computer Science from McGill University.
+	   <strong>My name is Allison Yan, and here are a few things about me.</strong>
+	   <ul>
+		  <li>I am passionate about simple and elegant aesthetics</li>
+		  <li>I believe in striking a balance between meeting business objectives and building enjoyable experiences </li>
+		  <li>I am pursuing a career in user experience design</li>
+	   </ul>	 	  
+		   Based in Toronto, Canada, I will be receiving my Master of Health Informatics from the University of Toronto in June 2015.  
+		   My background in psychology and computer science have helped to inform my interest in the growing interaction between humans and computers. 
+		   My approach to solving design problems is holistically user-centred, empathic, and iterative. 
+		   Feel free to request a copy of my portfolio or simply e-mail me at allison.yan(AT)gmail(DOT)com! Thanks for stopping by :) 
+	   
 	   </span>
 	</div>
   </div>
   
   <div class="row">
-    <div class="footer twelve columns">allison.yan(AT)gmail(DOT)com</div>
+    <div class="footer twelve columns">I'm a footer!!</div>
  
   </div>
 </div>
