--- a/sandbox.html
+++ b/sandbox.html
@@ -1,3 +1,8 @@
+<!--
+ Site made with the help of Skeleton Boilerplate.
+ HTML/CSS modifications by Allison Yan. 
+ -->  
+
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
@@ -9,10 +14,11 @@
   <title>Allison Yan | Home</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
@@ -50,7 +56,7 @@
 		  <li>I am pursuing a career in user experience design</li>
 	   </ul>	 	  
 		   Based in Toronto, Canada, I will be receiving my Master of Health Informatics from the University of Toronto in June 2015.  
-		   My background in psychology and computer science have helped to inform my interest in the growing interaction between humans and computers. 
+		   My background in psychology and computer science have helped to inform my interests in human factors and the growing interaction between humans and computers. 
 		   My approach to solving design problems is holistically user-centred, empathic, and iterative. 
 		   Feel free to request a copy of my portfolio or simply e-mail me at allison.yan(AT)gmail(DOT)com! Thanks for stopping by :) 
 	   
@@ -59,7 +65,10 @@
   </div>
   
   <div class="row">
-    <div class="footer twelve columns">I'm a footer!!</div>
+    <div class="footer twelve columns">
+	<a href="#"><i class="fa fa-twitter fa-lg links"></i></a>
+	<a href="#"><i class="fa fa-linkedin fa-lg links"></i></a>
+	<a href="#"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
  
   </div>
 </div>
