--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Allison Yan | Home</title>
+  <title>Allison Yan | Work</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -43,26 +43,14 @@
         </nav>  
 	</div>
   </div>
-
+  
   <div class="row">
-    <div class="one-half column">1/2</div>
-    <div class="one-half column">
-	 
-	   <span class="content">
-	   <strong>My name is Allison Yan, and here are a few things about me.</strong>
-	   <ul>
-		  <li>I am passionate about simple and elegant aesthetics</li>
-		  <li>I believe in striking a balance between meeting business objectives and building enjoyable experiences </li>
-		  <li>I am pursuing a career in user experience design</li>
-	   </ul>	 	  
-		   Based in Toronto, Canada, I will be receiving my Master of Health Informatics from the University of Toronto in June 2015.  
-		   My background in psychology and computer science have helped to inform my interests in human factors and the growing interaction between humans and computers. 
-		   My approach to solving design problems is holistically user-centred, empathic, and iterative. 
-		   Feel free to request a copy of my portfolio or simply e-mail me at allison.yan(AT)gmail(DOT)com! Thanks for stopping by :) 
-	   
-	   </span>
+    <div class="twelve columns">
+	<div class="bigbutton"><a href="#">Download my CV/r&eacute;sum&eacute;</a></div> 
+	<div style="padding-top:25px">My online portfolio is coming soon!</div>
 	</div>
   </div>
+  
   
   <div class="row">
     <div class="footer twelve columns">
