--- a/thanks.html
+++ b/thanks.html
@@ -47,17 +47,7 @@
   <div class="row">
     <div class="twelve columns">
 	<span class="content">
-	You can send me an e-mail at allison.yan(AT)gmail(DOT)com, or use this form below. 
-	<form action="http://formspree.io/allison.yan@gmail.com" method=post>
-    <strong>Name:</strong>
-	<input type="text" name="name" placeholder="Your name">
-	<strong>E-mail:</strong>
-    <input type="email" name="_replyto" placeholder="name@domain.com">
-	<strong>Message:</strong> 
-	<input type="text" name="message" placeholder="Your message">
-	<input type="hidden" name="_next" value="thanks.html" />
-    <input type="submit" value="Send">
-</form></span>
+	Thank you for your message! I will get in touch with you shortly.</span>
 	</div>
   </div>
   
