--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Allison Yan | Work</title>
+  <title>Allison Yan | Contact</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -36,7 +36,7 @@
     <div class="twelve columns">
 	        <nav>
           <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="./">About</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -46,27 +46,31 @@
   
   <div class="row">
     <div class="twelve columns">
-	<span class="content">
-	You can send me an e-mail at allison.yan(AT)gmail(DOT)com, or use this form below. 
+	<div class="contact">
+	You can send me an e-mail at allison.yan(AT)gmail(DOT)com, or use this form below.<P>&nbsp;</P>
 	<form action="http://formspree.io/allison.yan@gmail.com" method=post>
-    <strong>Name:</strong>
-	<input type="text" name="name" placeholder="Your name">
-	<strong>E-mail:</strong>
-    <input type="email" name="_replyto" placeholder="name@domain.com">
-	<strong>Message:</strong> 
-	<input type="text" name="message" placeholder="Your message">
+    <div>
+	<strong>Name:</strong><br>
+	<input type="text" name="name" placeholder="Your name"></div>
+    <div>
+	<strong>E-mail:</strong><br>
+    <input type="email" name="_replyto" placeholder="name@domain.com"></div>
+    <div>	
+	<strong>Message:</strong> <br>
+	<textarea name="message" placeholder="Your message"></textarea></div>
 	<input type="hidden" name="_next" value="thanks.html" />
+	<input type="text" name="_gotcha" style="display:none" />
     <input type="submit" value="Send">
-</form></span>
+</form></div>
 	</div>
   </div>
   
   
   <div class="row">
     <div class="footer twelve columns">
-	<a href="#"><i class="fa fa-twitter fa-lg links"></i></a>
-	<a href="#"><i class="fa fa-linkedin fa-lg links"></i></a>
-	<a href="#"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
+	<a href="http://www.twitter.com/allisonyan_" target='_blank'><i class="fa fa-twitter fa-lg links"></i></a>
+	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
+	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
  
   </div>
 </div>
