--- a/thanks.html
+++ b/thanks.html
@@ -11,7 +11,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Allison Yan | Work</title>
+  <title>Allison Yan | Thank You!</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -36,7 +36,7 @@
     <div class="twelve columns">
 	        <nav>
           <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="./">About</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -46,7 +46,7 @@
   
   <div class="row">
     <div class="twelve columns">
-	<span class="content">
+	<span class="contact">
 	Thank you for your message! I will get in touch with you shortly.</span>
 	</div>
   </div>
@@ -54,9 +54,9 @@
   
   <div class="row">
     <div class="footer twelve columns">
-	<a href="#"><i class="fa fa-twitter fa-lg links"></i></a>
-	<a href="#"><i class="fa fa-linkedin fa-lg links"></i></a>
-	<a href="#"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
+	<a href="http://www.twitter.com/allisonyan_" target='_blank'><i class="fa fa-twitter fa-lg links"></i></a>
+	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
+	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
  
   </div>
 </div>
