--- a/work.html
+++ b/work.html
@@ -36,9 +36,9 @@
     <div class="twelve columns">
 	        <nav>
           <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="./">About</a></li>
             <li><a href="work.html">Work</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>  
 	</div>
@@ -54,9 +54,9 @@
   
   <div class="row">
     <div class="footer twelve columns">
-	<a href="#"><i class="fa fa-twitter fa-lg links"></i></a>
-	<a href="#"><i class="fa fa-linkedin fa-lg links"></i></a>
-	<a href="#"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
+	<a href="http://www.twitter.com/allisonyan_" target='_blank'><i class="fa fa-twitter fa-lg links"></i></a>
+	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
+	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
  
   </div>
 </div>
