--- a/sandbox.html
+++ b/sandbox.html
@@ -45,7 +45,9 @@
   </div>
 
   <div class="row">
-    <div class="five columns">beep</div>
+    <div class="five columns profile">
+	<img src="images/ay.jpg">
+	</div>
 	<div class="seven columns">
 	   <span class="content">
 	   <strong>My name is Allison Yan, and here are a few things about me.</strong>
