Colours and images

--- a/sandbox.html
+++ b/sandbox.html
@@ -50,7 +50,7 @@
 	</div>
 	<div class="seven columns">
 	   <span class="content">
-	   <strong>My name is Allison Yan, and here are a few things about me.</strong>
+	   <strong>Hi! I'm Allison. Here are a few things about me.</strong>
 	   <ul>
 		  <li>I am passionate about simple and elegant aesthetics</li>
 		  <li>I believe in striking a balance between meeting business objectives and building enjoyable experiences </li>
