--- a/work.html
+++ b/work.html
@@ -46,8 +46,8 @@
   
   <div class="row">
     <div class="twelve columns">
-	<div class="bigbutton"><a href="#">Download my CV/r&eacute;sum&eacute;</a></div> 
-	<div style="padding-top:25px">My online portfolio is coming soon!</div>
+	<div class="bigbutton"><a href="AllisonYan_CV_Apr2015.pdf">Download my CV/r&eacute;sum&eacute;</a></div> 
+	<div style="padding-top:25px">Please e-mail me for a copy of my portfolio.</div>
 	</div>
   </div>
   
