--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div class="bigbutton"><a href="AllisonYan_CV_Apr2015.pdf">Download my CV/r&eacute;sum&eacute;</a></div> 
-	<div style="padding-top:25px">Please e-mail me for a copy of my portfolio.</div>
+	<div style="padding-top:25px">My portfolio is currently available upon request.</div>
 	</div>
   </div>
   
