--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+ Site made with the help of Skeleton Boilerplate. http://getskeleton.com/
+ HTML/CSS modifications by Allison Yan. 
+ -->  
+
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
@@ -7,16 +12,68 @@
 
   <meta charset="utf-8">
   <title>Allison Yan | Home</title>
-  <meta name="description" content="Allison Yan, UX/UI Designer, Bubble Tea Enthusiast. Toronto.">
-  <meta name="keywords" content="allison yan">
-  <meta name="robots" content="index, follow" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
 
-UNBREAKABLE
+
+<div class="container">
+
+  <div class="row">
+    <div class="twelve columns">
+	<span class="heading"><a href="./">Allison Yan</a></span>
+	</div>
+  </div>
+  <div class="row">
+    <div class="twelve columns">
+	        <nav>
+          <ul>
+            <li><a href="./">About</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>  
+	</div>
+  </div>
+
+  <div class="row">
+    <div class="five columns profile">
+	<img src="images/ay.jpg">
+	</div>
+	<div class="seven columns">
+	   <span class="content">
+	   <strong>Hi! I'm Allison. Here are a few things about me.</strong>
+	   <ul>
+		  <li>I am passionate about simple and elegant aesthetics</li>
+		  <li>I believe in striking a balance between meeting business objectives and building enjoyable experiences </li>
+		  <li>I am pursuing a career in user experience design</li>
+	   </ul>	 	  
+		   Based in Toronto, Canada, I will be receiving my Master of Health Informatics from the University of Toronto in June 2015.  
+		   My background in psychology and computer science have helped to inform my interests in human factors and the growing interaction between humans and computers. 
+		   My approach to solving design problems is holistically user-centred, empathic, and iterative. 
+		   Fun facts: This site was coded by hand using <a href="http://getskeleton.com/" target='_blank'>Skeleton</a>, and is hosted by GitHub Pages.<br><br>
+		   Feel free to request a copy of my portfolio or simply e-mail me at allison.yan(AT)gmail(DOT)com! Thanks for stopping by :) 
+	   
+	   </span>
+	</div>
+  </div>
+  
+  <div class="row">
+    <div class="footer twelve columns">
+	<a href="http://www.twitter.com/allisonyan_" target='_blank'><i class="fa fa-twitter fa-lg links"></i></a>
+	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
+	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
+ 
+  </div>
+</div>
 
 </body>
 </html>
