--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,9 @@
   <title>Allison Yan | Contact</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <meta name="description" content="A modest portfolio by Allison Yan.">
+  <meta name="author" content="">
+  <meta name="robots" content="index,follow">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
