--- a/thanks.html
+++ b/thanks.html
@@ -24,7 +24,7 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-61633837-1', 'auto');
   ga('send', 'pageview');
@@ -38,14 +38,14 @@
 
   <div class="row">
     <div class="twelve columns">
-	<span class="heading"><a href="./">Allison Yan</a></span>
+	<span class="header"><a href="./">Allison Yan</a></span>
 	</div>
   </div>
   <div class="row">
     <div class="twelve columns">
 	        <nav>
           <ul>
-            <li><a href="./">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -63,9 +63,10 @@
   
   <div class="row">
     <div class="footer twelve columns">
-	<a href="http://www.twitter.com/allisonyan_" target='_blank'><i class="fa fa-twitter fa-lg links"></i></a>
+	<a href="http://www.twitter.com/allisonyan_" target='_blank' title="Twitter: @allisonyan_"><i class="fa fa-twitter fa-lg links"></i></a>
 	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
 	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
+    <p class="description">&copy; 2015 Allison Yan</p>
  
   </div>
 </div>
