--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<h4>Hi there, I'm Allison!</h4>
 	<p>I'm an aspiring user experience designer in Toronto.</p>
     <p>I aim to engage users in the development of enjoyable product experiences.</p>
-	<p>Most recently, I interned at <a href="http://www.humanfactors.ca" target='_blank'>Healthcare Human Factors</a>.</p>
+	<p>Most recently, I completed a practicum at <a href="http://www.humanfactors.ca" target='_blank'>Healthcare Human Factors</a>.</p>
 	<div class="bigbutton"><a href="about.html">Learn More</a></div> 
 	</div>
   </div>
