--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 	<div class="profile"><img src="images/ay.jpg"></div>
 	   <span class="content">
 		   <P>I'm Allison Yan, and I am an aspiring UX designer based in Toronto, Canada. 
-		   I have always been passionate about understanding how people think, and how we are affected by our environments.
+		   I have always been passionate about understanding how people think, and how people are affected by their environments.
 		   My favourite questions to ask were, and still are, "Why?" and "How can we make this better?" 
 		   These days, I seek to understand what makes an experience enjoyable, and to figure out how to support people and their work through design. 
 		   
