--- a/thanks.html
+++ b/thanks.html
@@ -38,7 +38,7 @@
 
   <div class="row">
     <div class="twelve columns">
-	<span class="header"><a href="./">Allison Yan</a></span>
+	<span class="header"><a class="hvr-fade" href="./">Allison Yan</a></span>
 	</div>
   </div>
   <div class="row">
