--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="footer twelve columns">
 	<a href="http://www.twitter.com/allisonyan_" target='_blank' title="Twitter: @allisonyan_"><i class="fa fa-twitter fa-lg links"></i></a>
 	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
-	<a href="http://www.pinterest.com/allisony_n" target='_blank'><i class="fa fa-pinterest-p fa-lg links"></i></a>
+	<a href="http://www.pinterest.com/allisony_n" target='_blank'><i class="fa fa-pinterest fa-lg links"></i></a>
 	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
     <p class="description">&copy; 2015 Allison Yan</p>
  
