--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
   ga('send', 'pageview');
 
 </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="jquery.sticky.js"></script>
+<script>
+  $(document).ready(function(){
+    $("#menu").sticky({topSpacing:0});
+  });
+</script>
 </head>
 <body>
 
@@ -39,18 +46,16 @@
 
   <div class="row">
     <div class="twelve columns">
+	<div id="menu">
 	<span class="header"><a class="hvr-fade" href="./">Allison Yan</a></span>
-	</div>
-  </div>
-  <div class="row">
-    <div class="twelve columns">
-	        <nav>
+		        <nav>
           <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>  
+	</div> 
 	</div>
   </div>
 
@@ -59,7 +64,7 @@
 	<h4>Hi there, I'm Allison!</h4>
 	<p>I'm an aspiring user experience designer in Toronto.</p>
     <p>I aim to engage users in the development of enjoyable product experiences.</p>
-	<p>Most recently, I completed a practicum at <a href="http://www.humanfactors.ca" target='_blank'>Healthcare Human Factors</a>.</p>
+	<p>Most recently, I interned at <a href="http://www.humanfactors.ca" target='_blank'>Healthcare Human Factors</a>.</p>
 	<div class="bigbutton"><a href="about.html">Learn More</a></div> 
 	</div>
   </div>
