--- a/thanks.html
+++ b/thanks.html
@@ -30,6 +30,13 @@
   ga('send', 'pageview');
 
 </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="jquery.sticky.js"></script>
+<script>
+  $(document).ready(function(){
+    $("#menu").sticky({topSpacing:0});
+  });
+</script>
 </head>
 <body>
 
@@ -38,18 +45,16 @@
 
   <div class="row">
     <div class="twelve columns">
+	<div id="menu">
 	<span class="header"><a class="hvr-fade" href="./">Allison Yan</a></span>
-	</div>
-  </div>
-  <div class="row">
-    <div class="twelve columns">
-	        <nav>
+		        <nav>
           <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="work.html">Work</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>  
+	</div> 
 	</div>
   </div>
   
