--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
 
     <div class="row">
     <div class="twelve columns">
-	<div class="bigbutton"><a href="AllisonYan-resume-2015.pdf">Download my r&eacute;sum&eacute;</a></div> 
+	<div class="bigbutton"><a href="allisonyan-resume.pdf">Download my r&eacute;sum&eacute;</a></div> 
 	<span class="description">My portfolio is currently available upon request.</span>
 	</div>
   </div>
