--- a/work.html
+++ b/work.html
@@ -48,13 +48,13 @@
     <div class="twelve columns">
 	<div id="menu">
 	<span class="header"><a class="hvr-fade" href="./">Allison Yan</a></span>
-		        <nav>
+		<nav>
           <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <a href="about.html"><li>About</li></a>
+            <a href="work.html"><li>Work</li></a>
+            <a href="contact.html"><li>Contact</li></a>
           </ul>
-        </nav>  
+        </nav>    
 	</div> 
 	</div>
   </div>
