Be more confident

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="row">
     <div class="twelve columns content">
 	<h4>Hi there, I'm Allison!</h4>
-	<p>I'm an aspiring user experience designer in Toronto.</p>
+	<p>I'm a user experience designer in Toronto, Canada.</p>
     <p>I aim to engage users in the development of enjoyable product experiences.</p>
 	<p>Most recently, I interned at <a href="http://www.humanfactors.ca" target='_blank'>Healthcare Human Factors</a>.</p>
 	<div class="bigbutton"><a href="about.html">Learn More</a></div> 
