--- a/about.html
+++ b/about.html
@@ -62,10 +62,11 @@
   <div class="row">
 	<div class="profile"><img src="images/ay.jpg"></div>
 	   <span class="content">
-		   <P>I'm Allison Yan, and I am an aspiring UX designer based in Toronto, Canada. 
+		   <P>I'm Allison Yan, and I am a UX designer based in Toronto, Canada. 
 		   I have always been passionate about understanding how people think, and how people are affected by their environments.
 		   My favourite questions to ask were, and still are, "Why?" and "How can we make this better?" 
 		   These days, I seek to understand what makes an experience enjoyable, and to figure out how to support people and their work through design. 
+		  
 		   
 		   <P>In my spare time, I love discovering new things in my city, from <a href="http://www.last.fm/user/babymilk" target='_blank'>music</a> to food. 
            I am a self-taught web developer and am always learning new techniques in visual and web design. 
