--- a/about.html
+++ b/about.html
@@ -78,7 +78,9 @@
 		   Thanks for stopping by.</P>
 		   
 		   <P class="description">NOTES ON A PORTFOLIO<br>
-		   This site was built using <a href="http://getskeleton.com/" target='_blank'>Skeleton</a> boilerplate, and is hosted on  <a href="https://pages.github.com/" target='_blank'>GitHub Pages</a>.</P>
+		   This site was built using <a href="http://getskeleton.com/" target='_blank'>Skeleton</a> boilerplate, and is hosted on  <a href="https://pages.github.com/" target='_blank'>GitHub Pages</a>.
+		   <br>Profile picture by <a href="http://www.twitter.com/d_rr_ll" target='_blank' title="pew pew">Darrell de Lara</a>. 
+		   <br><a href="http://www.eubene.me" target='_blank'>Eubene Sa</a> is an all right dude.</P>
 	     
 	   </span>
   </div>
