Optimized button css

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="header"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="about.html"><li>About</li></a>
@@ -65,7 +65,7 @@
 	<p>I'm a user experience designer in Toronto, Canada.</p>
     <p>I aim to engage users in the development of enjoyable product experiences.</p>
 	<p>Most recently, I interned at <a href="http://www.humanfactors.ca" target='_blank'>Healthcare Human Factors</a>.</p>
-	<div class="bigbutton"><a href="about.html">Learn More</a></div> 
+	<span class="bigbutton"><a href="about.html" class="hvr-fade">Learn More</a></span>
 	</div>
   </div>
   
