Updated code for new button css

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="header"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="about.html"><li>About</li></a>
