--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="header"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="about.html"><li>About</li></a>
@@ -61,8 +61,9 @@
 
     <div class="row">
     <div class="twelve columns">
-	<div class="bigbutton"><a href="AllisonYan-resume.pdf">Download my r&eacute;sum&eacute;</a></div> 
-	<span class="description">My portfolio is currently available upon request.</span>
+	<span class="bigbutton"><a href="AllisonYan-resume.pdf" class="hvr-fade">Download my r&eacute;sum&eacute;</a></span> 
+	<P>&nbsp;</P>
+	<P>My portfolio is currently available upon request.</P>
 	</div>
   </div>
     
