Alignment of content

--- a/work.html
+++ b/work.html
@@ -60,9 +60,9 @@
   </div>
 
     <div class="row">
-    <div class="twelve columns">
+    <div class="twelve columns content" style="text-align:center">
 	<span class="bigbutton"><a href="AllisonYan-resume.pdf" class="hvr-fade">Download my r&eacute;sum&eacute;</a></span> 
-	<P>&nbsp;</P>
+	<br><br>
 	<P>My portfolio is currently available upon request.</P>
 	</div>
   </div>
