--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 		   <P>In my spare time, I love discovering new things in my city, from <a href="http://www.last.fm/user/babymilk" target='_blank'>music</a> to food. 
            I am a self-taught web developer and am always learning new techniques in visual and web design. 
 		   I'm usually not without a small notebook, jotting down my ideas and doodles on a subway ride. 
-		   I received <a href="http://ihpme.utoronto.ca/academics/pp/mhi/" target='_blank'>Master of Health Informatics from the University of Toronto</a> in June 2015.
+		   I received a <a href="http://ihpme.utoronto.ca/academics/pp/mhi/" target='_blank'>Master of Health Informatics from the University of Toronto</a> in June 2015.
 		   </P>
 		   <P><i class="fa fa-star"></i>&nbsp;<strong>I am currently seeking full-time opportunities.</strong></P>
 		   <P>The best way to reach me is <strong>allison.yan@gmail.com</strong>, or via <a href="contact.html">contact form</a>. 
