--- a/COPD.html
+++ b/COPD.html
@@ -74,7 +74,7 @@
     <p>A colleague conducted interviews with health professionals on best practices and their experiences with treating patients with COPD and suspected COPD. 
 	Additionally, we analyzed existing care pathways such as NICE by the NHS to get an idea of the app's structure. 
 	</p>
-<strong class="project-step">Areas of Opportunity</strong>
+	<h5 class="project-substep">Areas of Opportunity</h5>
     <p>Our goal was to simplify the existing HQO guidelines and to make less common or memorized information at the forefront. 
 	The target audience for this app was healthcare professionals in emergency and clinic settings.</p>
 
@@ -93,7 +93,9 @@ My colleague created the mobile Axure prototype based on HQO care guidelines and
 
 <h4 class="project-step">Usability Testing</h4>
 <p>We conducted 5 usability tests with health professionals in their offices/hospitals. I wrote 10 usability testing scenarios and pre- and post-surveys. I assisted in 
-recording participant observations and eliciting open-ended feedback. We further optimized and simplified the mobile and desktop prototypes using the feedback we received during testing as well as meetings with our stakeholders. 
+recording participant observations and eliciting open-ended feedback. </p>
+
+<p>We further optimized and simplified the mobile and desktop prototypes using the feedback we received during testing as well as meetings with our stakeholders. 
 I analyzed and compared data from two rounds of testing, which showed improved navigation and satisfaction with the application.</p>
 <h4 class="project-step">Outcomes</h4>
 <P>Our graphic designer created a visual treatment based on a set style guide. We received positive feedback from our stakeholders. 
