New font, and added work folder

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,15 +11,15 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Allison Yan | Thank You!</title>
-
+  <title>Allison Yan | COPD Clinical Management App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <meta name="description" content="A portfolio by Toronto-based aspiring UX designer, Allison Yan. Having completed a practicum at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
+  <meta name="author" content="">
+  <meta name="robots" content="index,follow">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/png" href="images/favicon.png">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="header"><a class="hvr-fade" href="./">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="about.html"><li>About</li></a>
@@ -61,8 +61,22 @@
   
   <div class="row">
     <div class="twelve columns">
-	<span class="contact">
-	Thank you for your message! I will get in touch with you shortly.</span>
+	<div class="contact">
+	You can send me an e-mail at allison.yan@gmail.com, or use this form below.<P>&nbsp;</P>
+	<form action="http://formspree.io/allison.yan@gmail.com" method=post>
+    <div>
+	<strong>Name:</strong><br>
+	<input type="text" name="name" placeholder="Your name"></div>
+    <div>
+	<strong>E-mail:</strong><br>
+    <input type="email" name="_replyto" placeholder="name@domain.com"></div>
+    <div>	
+	<strong>Message:</strong> <br>
+	<textarea name="message" placeholder="Your message"></textarea></div>
+	<input type="hidden" name="_next" value="thanks.html" />
+	<input type="text" name="_gotcha" style="display:none" />
+    <input type="submit" value="Send">
+</form></div>
 	</div>
   </div>
   
