--- a/work/copd/index.html
+++ b/work/copd/index.html
@@ -11,17 +11,18 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Allison Yan | Work</title>
+  <title>Allison Yan | HQO COPD Clinical Care Guidance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A portfolio by Toronto-based aspiring UX designer, Allison Yan. Having completed a practicum at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
   <meta name="author" content="">
   <meta name="robots" content="index,follow">  
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/skeleton.css">
+  <link rel="stylesheet" href="../../css/style.css">
+  <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
+  <link href='../../css/SourceSerifPro-Regular.ttf' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/png" href="images/favicon.png">
-<script>
+<!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -31,7 +32,7 @@
   ga('send', 'pageview');
 
 </script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
 <script src="jquery.sticky.js"></script>
 <script>
   $(document).ready(function(){
@@ -60,53 +61,53 @@
   </div>
   
   <div class="row">
-    <div class="twelve columns content">
-	<!-- content new here jul 24-->
-	<p><h4 class="project-title">HQO COPD Clinical Care Guidelines</h4></P>
-	
+    <div class="twelve columns hero">
+	<p><h4 class="project-title">HQO COPD Clinical Care Guidance</h4></P>
 	<h6 class="project-subtitle">Adapting a paper flowchart into a responsive web application</h6>
 	<h6 class="project-type">User Experience</h6>
+    </div>	
+  </div>
+  
+  <div class="row">
+    <div class="twelve columns content">  
 	<p>Health Quality Ontario asked Healthcare Human Factors to transform paper-based medical guidelines for chronic obstructive pulmonary disease into a responsive 
-       web application. To begin, we consulted with health professionals on the accuracy and usefulness of the guidelines.<p>
+       web application. <p>
 	
-	<h4 class="project-step">Environmental Analysis</h4>
-	<!-- <h5 class="project-substep"></h5> --> 
-    <p>A colleague conducted interviews with health professionals on best practices and their experiences with treating patients with COPD and suspected COPD. 
-	Additionally, we analyzed existing care pathways such as NICE by the NHS to get an idea of the app's structure. 
+	<h5 class="project-step">Environmental Analysis</h5>
+    <p>To begin, we interviewed health professionals on best practices, experiences, and the accuracy and usefulness of the guidelines.
+	Additionally, we analyzed existing care pathways such as NICE by the NHS to better understand the structure of care guideline applications. 
 	</p>
-	<h5 class="project-substep">Areas of Opportunity</h5>
-    <p>Our goal was to simplify the existing HQO guidelines and to make less common or memorized information at the forefront. 
-	The target audience for this app was healthcare professionals in emergency and clinic settings.</p>
+	<h5 class="project-step">Areas of Opportunity</h5>
+    <p>Our goal was to simplify the existing HQO guidelines on care for COPD, without compromising crucial information. 
+	Consulting with the client, we compiled existing approved COPD web resources that would assist clinicians as well as patients. 
+	Specifically, we wanted to design a responsive application that could work in an emergency setting as well as in a clinical consultation setting.</p>
 
-<h4 class="project-step">Wireframes & Prototypes</h4>
-<p>Planned features of the app: 
-
-1. Search functionality 
-
-2.Clinic map 
-
-3.Access to guidelines for other diseases
+<h5 class="project-step">Wireframes & Prototypes</h5>
+<p>The app included a search functionality and clinic maps. 
 
 My colleague created the mobile Axure prototype based on HQO care guidelines and interviews. Based on mobile prototype, I created the desktop prototype in Axure. 
+Working in Agile development, we quickly tested interactions and experiences with each iteration.  
 
 </p>
 
-<h4 class="project-step">Usability Testing</h4>
-<p>We conducted 5 usability tests with health professionals in their offices/hospitals. I wrote 10 usability testing scenarios and pre- and post-surveys. I assisted in 
-recording participant observations and eliciting open-ended feedback. </p>
+<h5 class="project-step">Usability Testing</h5>
+<p>My role primarily revolved around usability testing. I wrote 10 usability testing scenarios and pre- and post-surveys. I assisted in 
+recording participant observations and eliciting open-ended feedback with health professionals in their offices/hospitals. </p>
 
 <p>We further optimized and simplified the mobile and desktop prototypes using the feedback we received during testing as well as meetings with our stakeholders. 
-I analyzed and compared data from two rounds of testing, which showed improved navigation and satisfaction with the application.</p>
-<h4 class="project-step">Outcomes</h4>
-<P>Our graphic designer created a visual treatment based on a set style guide. We received positive feedback from our stakeholders. 
+I analyzed and compared data from two rounds of testing, which showed improved navigation ability and satisfaction with the application.</p>
+<h5 class="project-step">Outcomes</h5>
+<P>We found that users appreciated the fact that we had included clinic maps and test thresholds, as they are normally memorized or readily found consolidated. 
+Our graphic designer created a visual treatment based on a set style guide. We received positive feedback from our stakeholders on our design and analysis. 
 
 </P>
+ <br>
   </div> 
 </div>
 
   <div class="row">
-    <div class="one-third column">
-<strong>Team Members</strong><br>
+    <div class="one-third column content">
+<strong class="project-substep">Team Members</strong><br>
 Niusha Barmala<br>
 Diane de Souza<br>
 Anthony Mei<br>
@@ -115,17 +116,17 @@ David Ngo<br>
 Laura Parente<br><br> 
 
    </div>
-       <div class="one-third column">
-<strong>Roles</strong><br>
+       <div class="one-third column content">
+<strong class="project-substep">Roles</strong><br>
 Assisting with usability testing<br>
 Wireframes<br>
 Prototyping<br>
 Information architecture<br>
 Interaction design<br><br>
    </div>
-   <div class="one-third column">
+   <div class="one-third column content">
    
-<strong>Tools</strong><br>
+<strong class="project-substep">Tools</strong><br>
 Axure RP 7<br>
 Microsoft Excel<br>
 Redmine<br><br>
@@ -138,7 +139,7 @@ Redmine<br><br>
 	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
 	<a href="http://www.pinterest.com/allisony_n" target='_blank'><i class="fa fa-pinterest fa-lg links"></i></a>
 	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
-    <p class="description">&copy; 2015 Allison Yan</p>
+    <p class="copyright">&copy; 2015 Allison Yan</p>
  
   </div>
 	
