--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> 
+  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/png" href="images/favicon.png">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -62,7 +63,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div class="contact">
-	You can send me an e-mail at allison.yan@gmail.com, or use this form below.<P>&nbsp;</P>
+	<P>You can send me an e-mail at allison.yan@gmail.com, or use this form below.</P>
 	<form action="http://formspree.io/allison.yan@gmail.com" method=post>
     <div>
 	<strong>Name:</strong><br>
@@ -87,7 +88,7 @@
 	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
 	<a href="http://www.pinterest.com/allisony_n" target='_blank'><i class="fa fa-pinterest fa-lg links"></i></a>
 	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
-    <p class="description">&copy; 2015 Allison Yan</p>
+    <p class="copyright">&copy; 2015 Allison Yan</p>
  
   </div>
 </div>
